# ML

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Makefile  README.MD  build.ninja  cmake_install.cmake  rules.ninja
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/inculde/: headers.h
src/inculde/CSVParser/: csvParser.1.hpp  csvParser.hpp
src/inculde/Frame/: frame.hpp
src/inculde/Model/: KMean.hpp  LinearRegression.hpp  LogisticRegression.hpp  PolyRegression.hpp  core.hpp
src/inculde/PrettyPrint/: prettyPrint.hpp  terminal_raw.hpp
src/inculde/Series/: vec.hpp
src/inculde/algorithm/: Eigen.hpp  PCA.hpp  PolynomialDerivative.hpp  PolynomialRoots.hpp  median.hpp
src/inculde/gch/: headers.hpp
test/: Untitled.ipynb  data.csv  test.csv  train.csv
test/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
